# bot_hyperliquid

./: .env.example  .gitignore  LICENSE  README.md  bot_hyperliquide.md  config.json  config.json.bak  config_optimized.json  last_optimization.txt  last_optuna_optimization.txt  main.py  pyproject.toml
backtest/: __init__.py  backtester.py  optimizer.py  optuna_optimizer.py  robustness_check.py  run_optimization.py
src/config/: settings.py
src/exchange/: __init__.py  client.py
src/risk/: __init__.py  manager.py
src/strategy/: __init__.py  indicators.py  signals.py
src/utils/: __init__.py  logger.py  notifier.py  telegram_bot.py
tests/: test_advanced_features.py  test_client.py  test_indicators.py  test_risk_manager.py  test_signals.py
